@@ -1091,6 +1091,7 @@ struct _configitem_oper {
 	anAuthStruct	 *auth;
 	ConfigItem_class *class;
 	ConfigItem	 *from;
+	unsigned long	 modes;
 	long		 oflags;
 	int			maxlogins;
 };
